--- a/src/app/pages/customer-management/customer-management.component.html
+++ b/src/app/pages/customer-management/customer-management.component.html
@@ -20,7 +20,7 @@
   >
     <ng-template pTemplate="header">
       <tr>
-        <th>ลำดับที่</th>
+        <th>ลำดับ</th>
         <th>รหัส</th>
         <th>ชื่อ</th>
         <th>นามสกุล</th>
@@ -50,14 +50,14 @@
             class="p-button-rounded p-button-raised p-button-warning"
             (click)="onVisibleEditCustomer(cloth)"
           ></button>
-          <button
+          <!-- <button
             pButton
             pRipple
             type="button"
             icon="fas fa-trash"
             class="p-button-rounded p-button-raised p-button-danger"
             (click)="onDelete(cloth.id)"
-          ></button>
+          ></button> -->
         </td>
       </tr>
     </ng-template>
@@ -65,6 +65,7 @@
 </div>
 
 <p-dialog
+  [modal]="true" [draggable]="false"
   header="เพิ่มลูกค้าใหม่"
   [(visible)]="newCustomerVisible"
   (onHide)="onResetValue()"
@@ -143,6 +144,7 @@
 </p-dialog>
 
 <p-dialog
+  [modal]="true" [draggable]="false"[draggable]="false"
   header="แก้ไขข้อมูลลูกค้าใหม่"
   [(visible)]="editCustomerVisible"
   (onHide)="onResetValue()"
