--- a/src/app/features/add-cloth/add-cloth.component.scss
+++ b/src/app/features/add-cloth/add-cloth.component.scss
@@ -1,12 +1,26 @@
 .container {
-  padding: 2rem 3rem
+  padding: 2rem 3rem;
 }
 
 .field {
   margin-top: 2.5rem;
   margin-bottom: 2.5rem;
+  text-align: center;
+
+  & > label {
+    font-size: 18px;
+  }
+
+  &-special {
+    background-color: rgba(199, 169, 0, 0.212);
+  }
 }
 
 .btn-add {
   width: 100%;
+}
+
+.label-special {
+  color: goldenrod;
+  font-size: large;
 }
