--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -28,7 +28,7 @@
   >
     <ng-template pTemplate="header">
       <tr>
-        <th>ลำดับที่</th>
+        <th>ลำดับ</th>
         <th>วันที่</th>
         <th>ลูกค้า</th>
         <th>สถานะ</th>
@@ -40,7 +40,18 @@
         <td>{{ index + 1 }}</td>
         <td>{{ order.created_at | thaidate: "short" }}</td>
         <td>{{ order.customer.firstName + " " + order.customer.lastName }}</td>
-        <td>{{ order.status }}</td>
+        <td>
+          <p-tag
+            styleClass="mr-2 font-bold"
+            [style]="{
+              'font-size': '14px',
+              padding: '.2rem .5rem .2rem .5rem '
+            }"
+            [severity]="order.status === 'IN' ? 'success' : 'warning'"
+            [value]="order.status === 'IN' ? 'อยู่ในระบบ' : 'นำส่งแล้ว'"
+            [rounded]="true"
+          ></p-tag>
+        </td>
         <td>{{ order.numClothe }}</td>
       </tr>
     </ng-template>
