--- a/src/app/pages/special-cloth-management/special-cloth-management.component.html
+++ b/src/app/pages/special-cloth-management/special-cloth-management.component.html
@@ -42,7 +42,6 @@
             [queryParams]="{ id: cloth.id }"
           ></button> -->
           <button
-            *ngIf="!specialClothes.includes(cloth.name)"
             pButton
             pRipple
             type="button"
@@ -60,11 +59,11 @@
   header="เพิ่มประเภทผ้าพิเศษ"
   [(visible)]="newSpecialClothVisible"
   (onHide)="onResetValue()"
-  [style]="{ width: '50vw', height: '30vh' }"
+  [style]="{ width: '50vw', height: '30vh' }"[modal]="true" [draggable]="false"
 >
   <div class="h-full flex flex-column justify-content-around">
     <div class="field">
-      <label for="texture-type" class="block" [style]="{ 'font-size': '25px' }">ชื่อประเภทผ้าพิเศษ</label>
+      <label for="texture-type" class="block" [style]="{ 'font-size': 'large' }">ชื่อประเภทผ้าพิเศษ</label>
       <input
         id="texture-type"
         type="text"
@@ -86,9 +85,39 @@
   </div>
 </p-dialog>
 
+<!-- <p-dialog
+  header="แก้ไขประเภทผ้าพิเศษ"
+  [(visible)]="editSpecialClothVisible"
+  (onHide)="onResetValue()"
+  [style]="{ width: '50vw', height: '30vh' }"[modal]="true" [draggable]="false"
+>
+  <div class="h-full flex flex-column justify-content-around">
+    <div class="field">
+      <label for="texture-type" class="block" [style]="{ 'font-size': 'large' }">ชื่อประเภทผ้าพิเศษ</label>
+      <input
+        id="texture-type"
+        type="text"
+        pInputText
+        class="p-inputtext-lg w-full"
+        [(ngModel)]="editSpecialClothValue"
+        placeholder="โปรดระบุประเภทผ้าชนิดพิเศษ"
+      />
+    </div>
+    <button
+      pButton
+      pRipple
+      class="p-button-success p-button-raised p-button-lg"
+      label="แก้ไข"
+      icon="fas fa-edit"
+      style="width: 100%; margin-top: 1rem"
+      (click)="onEditSpecialCloth()"
+    ></button>
+  </div>
+</p-dialog> -->
+
 <p-confirmDialog
   header="Warning"
   icon="pi pi-exclamation-triangle"
-  [style]="{ width: '30vw' }"
+  [style]="{ width: '30vw','font-size': 'large' }"
   [baseZIndex]="10000"
 ></p-confirmDialog>
