font login page update

--- a/src/app/core/components/login/login.component.html
+++ b/src/app/core/components/login/login.component.html
@@ -61,6 +61,7 @@
                   placeholder="Username"
                   [(ngModel)]="username"
                   required
+                  style="font-size: larger;"
                 />
               </div>
               <div class="form-group">
@@ -71,6 +72,7 @@
                   placeholder="Password"
                   [(ngModel)]="password"
                   required
+                  style="font-size: larger;"
                 />
                 <span
                   toggle="#password-field"
