--- a/src/app/features/add-cloth/add-cloth.component.scss
+++ b/src/app/features/add-cloth/add-cloth.component.scss
@@ -5,7 +5,7 @@
 .field {
   margin-top: 2.5rem;
   margin-bottom: 2.5rem;
-  text-align: center;
+  text-align: start;
 
   & > label {
     font-size: 18px;
