--- a/src/app/pages/cloth-problem-management/cloth-problem-management.component.html
+++ b/src/app/pages/cloth-problem-management/cloth-problem-management.component.html
@@ -47,7 +47,7 @@
             type="button"
             [icon]="'fas ' + (cloth.isDisable ? 'fa-undo' : 'fa-eye-slash')"
             class="p-button-rounded p-button-raised p-button-danger"
-            (click)="onDelete(cloth.id, cloth.isDisable)"
+            (click)="onDelete(cloth.id,cloth.name, cloth.isDisable)"
           ></button>
         </td>
       </tr>
