แสดงจำนวนทั้งหมดตอนเพิ่มผ้า

--- a/src/app/pages/cloth-management/add-cloths/add-cloths.component.html
+++ b/src/app/pages/cloth-management/add-cloths/add-cloths.component.html
@@ -185,6 +185,17 @@
       </div>
     </ng-container>
   </div>
+  <div
+    style="
+      text-align: end;
+      width: 80%;
+      margin: auto;
+      font-size: large;
+      margin-top: 1rem;
+    "
+  >
+    <span>จำนวนรวมทั้งหมด: {{ totalNumber }} ตัว</span>
+  </div>
   <button
     pButton
     pRipple
