--- a/src/app/pages/cloth-management/cloth-table/cloth-table.component.html
+++ b/src/app/pages/cloth-management/cloth-table/cloth-table.component.html
@@ -13,13 +13,33 @@
     ></button>
   </div>
   <p-table
+    #tb
     [value]="clothList"
     [rows]="10"
     [paginator]="true"
     responsiveLayout="stack"
     styleClass="p-datatable-lg"
-  >
-    <ng-template pTemplate="header"  let-columns>
+    [globalFilterFields]="[
+      'created_at',
+      'key',
+      'customer.firstName',
+      'customer.lastName',
+    ]"
+    ><ng-template pTemplate="caption">
+      <div class="flex">
+        <span class="p-input-icon-left ml-auto">
+          <i class="pi pi-search"></i>
+          <input
+            #inputSearch
+            pInputText
+            type="text"
+            (input)="tb.filterGlobal(inputSearch.value, 'contains')"
+            placeholder="ค้นหา"
+          />
+        </span>
+      </div>
+    </ng-template>
+    <ng-template pTemplate="header" let-columns>
       <tr>
         <th>ลำดับ</th>
         <th>วันที่</th>
@@ -30,14 +50,29 @@
         <th></th>
       </tr>
     </ng-template>
-    <ng-template pTemplate="body" let-cloth let-index="rowIndex"  let-columns="columns">
+    <ng-template
+      pTemplate="body"
+      let-cloth
+      let-index="rowIndex"
+      let-columns="columns"
+    >
       <tr>
         <td><span class="p-column-title">ลำดับ</span>{{ index + 1 }}</td>
-        <td><span class="p-column-title">วันที่</span>{{ cloth.created_at | thaidate: "short" }}</td>
+        <td>
+          <span class="p-column-title">วันที่</span
+          >{{ cloth.created_at | thaidate: "short" }}
+        </td>
         <td><span class="p-column-title">เลขที่รายการ</span>{{ cloth.key }}</td>
-        <td><span class="p-column-title">ชื่อลูกค้า</span>{{ cloth.customer.firstName }} {{ cloth.customer.lastName }}</td>
-        <td><span class="p-column-title">จำนวนผ้าที่ยังไม่ได้ส่ง</span>{{ cloth.numClothe }}</td>
-        <td><span class="p-column-title">สถานะ</span>
+        <td>
+          <span class="p-column-title">ชื่อลูกค้า</span
+          >{{ cloth.customer.firstName }} {{ cloth.customer.lastName }}
+        </td>
+        <td>
+          <span class="p-column-title">จำนวนผ้าที่ยังไม่ได้ส่ง</span
+          >{{ cloth.numClothe }}
+        </td>
+        <td>
+          <span class="p-column-title">สถานะ</span>
           <p-tag
             styleClass="mr-2 font-bold"
             [style]="{
