--- a/src/app/pages/cloth-problem-management/cloth-problem-management.component.html
+++ b/src/app/pages/cloth-problem-management/cloth-problem-management.component.html
@@ -17,7 +17,22 @@
     [paginator]="true"
     responsiveLayout="scroll"
     styleClass="p-datatable-lg"
-  >
+    #tb
+    [globalFilterFields]="['key', 'name']"
+    ><ng-template pTemplate="caption">
+      <div class="flex">
+        <span class="p-input-icon-left ml-auto">
+          <i class="pi pi-search"></i>
+          <input
+            #inputSearch
+            pInputText
+            type="text"
+            (input)="tb.filterGlobal(inputSearch.value, 'contains')"
+            placeholder="ค้นหา"
+          />
+        </span>
+      </div>
+    </ng-template>
     <ng-template pTemplate="header">
       <tr>
         <th>ลำดับ</th>
@@ -47,7 +62,7 @@
             type="button"
             [icon]="'fas ' + (cloth.isDisable ? 'fa-undo' : 'fa-eye-slash')"
             class="p-button-rounded p-button-raised p-button-danger"
-            (click)="onDelete(cloth.id,cloth.name, cloth.isDisable)"
+            (click)="onDelete(cloth.id, cloth.name, cloth.isDisable)"
           ></button>
         </td>
       </tr>
