--- a/src/app/pages/customer-management/customer-management.component.html
+++ b/src/app/pages/customer-management/customer-management.component.html
@@ -17,7 +17,22 @@
     [paginator]="true"
     responsiveLayout="scroll"
     styleClass="p-datatable-lg"
-  >
+    #tb
+    [globalFilterFields]="['key', 'firstName', 'lastName']"
+    ><ng-template pTemplate="caption">
+      <div class="flex">
+        <span class="p-input-icon-left ml-auto">
+          <i class="pi pi-search"></i>
+          <input
+            #inputSearch
+            pInputText
+            type="text"
+            (input)="tb.filterGlobal(inputSearch.value, 'contains')"
+            placeholder="ค้นหา"
+          />
+        </span>
+      </div>
+    </ng-template>
     <ng-template pTemplate="header">
       <tr>
         <th>ลำดับ</th>
@@ -65,7 +80,8 @@
 </div>
 
 <p-dialog
-  [modal]="true" [draggable]="false"
+  [modal]="true"
+  [draggable]="false"
   header="เพิ่มลูกค้าใหม่"
   [(visible)]="newCustomerVisible"
   (onHide)="onResetValue()"
@@ -144,7 +160,9 @@
 </p-dialog>
 
 <p-dialog
-  [modal]="true" [draggable]="false"[draggable]="false"
+  [modal]="true"
+  [draggable]="false"
+  [draggable]="false"
   header="แก้ไขข้อมูลลูกค้าใหม่"
   [(visible)]="editCustomerVisible"
   (onHide)="onResetValue()"
