--- a/src/app/pages/reports/reports.component.html
+++ b/src/app/pages/reports/reports.component.html
@@ -62,7 +62,7 @@
         [(ngModel)]="dateStart"
         (ngModelChange)="onChangeFilter()"
         dateFormat="dd/mm/yy"
-        [showTime]="true"
+        [showTime]="false"
       ></p-calendar>
     </div>
     <div class="field inline-block">
@@ -71,7 +71,7 @@
         [(ngModel)]="dateEnd"
         (ngModelChange)="onChangeFilter()"
         dateFormat="dd/mm/yy"
-        [showTime]="true"
+        [showTime]="false"
       ></p-calendar>
     </div>
   </div>
