--- a/src/app/pages/customer-management/customer-management.component.html
+++ b/src/app/pages/customer-management/customer-management.component.html
@@ -29,6 +29,7 @@
             type="text"
             (input)="tb.filterGlobal(inputSearch.value, 'contains')"
             placeholder="ค้นหา"
+            autoComplete="off"
           />
         </span>
       </div>
