--- a/src/app/pages/employee-management/employee-management.component.html
+++ b/src/app/pages/employee-management/employee-management.component.html
@@ -31,6 +31,7 @@
           <input
             #inputSearch
             pInputText
+            autoComplete="off"
             type="text"
             (input)="tb.filterGlobal(inputSearch.value, 'contains')"
             placeholder="ค้นหา"
