แก้เล็กๆน้อยๆแล้วนะ

--- a/src/app/pages/cloth-management/add-cloths/add-cloths.component.html
+++ b/src/app/pages/cloth-management/add-cloths/add-cloths.component.html
@@ -120,7 +120,7 @@
       <div class="grid px-3 text-center">
         <!-- <div class="col-1">ชนิดผ้า</div> -->
         <div class="col-2">ประเภทการใช้งาน</div>
-        <div class="col-2">ผ้าพิเศษ</div>
+        <div class="col-2">รายละเอียดชนิดผ้า</div>
         <div class="col-3">ผ้ามีปัญหา</div>
         <div class="col-2">นำเข้าซัก</div>
         <div class="col-1">จำนวน</div>
@@ -194,7 +194,7 @@
       margin-top: 1rem;
     "
   >
-    <span>จำนวนรวมทั้งหมด: {{ totalNumber }} ตัว</span>
+    <span>จำนวนรวมทั้งหมด: {{ totalNumber }} ชิ้น</span>
   </div>
   <button
     pButton
