--- a/src/app/pages/employee-management/employee-management.component.html
+++ b/src/app/pages/employee-management/employee-management.component.html
@@ -42,7 +42,7 @@
     <ng-template pTemplate="header">
       <tr>
         <th>ลำดับ</th>
-        <th>รหัส</th>
+        <th>รหัสพนักงาน</th>
         <th>ชื่อ</th>
         <th>นามสกุล</th>
         <!-- <th>ที่อยู่</th> -->
@@ -458,7 +458,7 @@
 </p-dialog>
 
 <p-confirmDialog
-  header="Warning"
+  header="คำเตือน"
   icon="pi pi-exclamation-triangle"
   [style]="{ width: '30vw' }"
   [baseZIndex]="10000"
