--- a/src/app/pages/texture-cloth-management/texture-cloth-management.component.html
+++ b/src/app/pages/texture-cloth-management/texture-cloth-management.component.html
@@ -39,7 +39,7 @@
     <ng-template pTemplate="header">
       <tr>
         <th>ลำดับ</th>
-        <th>รหัส</th>
+        <th>รหัสชนิดเนื้อผ้า</th>
         <th>ชื่อชนิดเนื้อผ้า</th>
         <th></th>
       </tr>
@@ -142,7 +142,7 @@
 </p-dialog> -->
 
 <p-confirmDialog
-  header="Warning"
+  header="คำเตือน"
   icon="pi pi-exclamation-triangle"
   [style]="{ width: '30vw', 'font-size': 'large' }"
   [baseZIndex]="10000"
