--- a/src/app/pages/cloth-management/confirm-order/confirm-order.component.html
+++ b/src/app/pages/cloth-management/confirm-order/confirm-order.component.html
@@ -86,7 +86,7 @@
       <div class="grid px-3 text-center">
         <div class="col-2">ชนิดผ้า</div>
         <div class="col-2">ประเภทการใช้งาน</div>
-        <div class="col-2">ผ้าพิเศษ</div>
+        <div class="col-2">รายละเอียดชนิดผ้า</div>
         <div class="col-4">ผ้ามีปัญหา</div>
         <div class="col-2">จำนวน</div>
       </div>
@@ -128,7 +128,7 @@
       <div class="grid px-3 text-center">
         <div class="col-2">ชนิดผ้า</div>
         <div class="col-2">ประเภทการใช้งาน</div>
-        <div class="col-2">ผ้าพิเศษ</div>
+        <div class="col-2">รายละเอียดชนิดผ้า</div>
         <div class="col-4">ผ้ามีปัญหา</div>
         <div class="col-2">จำนวน</div>
       </div>
@@ -166,30 +166,30 @@
     <label>สรุป</label>
   </div>
   <div class="container__summarize">
-    <p style="color: green;">ผ้าทั้งหมด {{ totalCloths }} ตัว</p>
+    <p style="color: green;">ผ้าทั้งหมด {{ totalCloths }} ชิ้น</p>
     <br>
     <p style="color: rgb(211, 172, 0); margin-top: 2rem;" *ngIf="thickCloths > 0">
-      ผ้าหนา {{ thickCloths }} ตัว
+      ผ้าหนา {{ thickCloths }} ชิ้น
     </p>
     <p style="color: rgb(211, 172, 0)" *ngIf="thinCloths > 0">
-      ผ้าบาง {{ thinCloths }} ตัว
+      ผ้าบาง {{ thinCloths }} ชิ้น
     </p>
     <p style="color: rgb(211, 172, 0)" *ngIf="specialCloths > 0">
-      ผ้าพิเศษ {{ specialCloths }} ตัว
+      ผ้าพิเศษ {{ specialCloths }} ชิ้น
     </p>
     <p style="color: rgb(211, 172, 0)" *ngIf="otherCloths > 0">
-      ผ้าอื่นๆ {{ otherCloths }} ตัว
+      ผ้าอื่นๆ {{ otherCloths }} ชิ้น
     </p>
     <br>
     <p style="color: rgb(128, 41, 0); margin-top: 2rem;" *ngIf="problemCloths > 0">
-      เป็นผ้ามีปัญหาจำนวน {{ problemCloths }} ตัว
+      เป็นผ้ามีปัญหาจำนวน {{ problemCloths }} ชิ้น
     </p>
     <br>
     <p style="color: rgb(10, 209, 10); margin-top: 2rem;" *ngIf="inProcess > 0">
-      นำเข้าซัก {{ inProcess }} ตัว
+      นำเข้าซัก {{ inProcess }} ชิ้น
     </p>
     <p style="color: rgb(180, 43, 8)" *ngIf="outProcess > 0">
-      ไม่นำเข้าซัก {{ outProcess }} ตัว
+      ไม่นำเข้าซัก {{ outProcess }} ชิ้น
     </p>
   </div>
   <div class="grid container__btn-group">
