--- a/src/app/pages/cloth-problem-management/cloth-problem-management.component.html
+++ b/src/app/pages/cloth-problem-management/cloth-problem-management.component.html
@@ -36,7 +36,7 @@
     <ng-template pTemplate="header">
       <tr>
         <th>ลำดับ</th>
-        <th>รหัส</th>
+        <th>รหัสประเภทผ้ามีปัญหา</th>
         <th>ประเภทผ้ามีปัญหา</th>
         <th></th>
       </tr>
@@ -139,7 +139,7 @@
 </p-dialog> -->
 
 <p-confirmDialog
-  header="Warning"
+  header="คำเตือน"
   icon="pi pi-exclamation-triangle"
   [style]="{ width: '30vw', 'font-size': 'large' }"
   [baseZIndex]="10000"
