--- a/src/app/pages/special-cloth-management/special-cloth-management.component.html
+++ b/src/app/pages/special-cloth-management/special-cloth-management.component.html
@@ -36,7 +36,7 @@
     <ng-template pTemplate="header">
       <tr>
         <th>ลำดับที่</th>
-        <th>รหัส</th>
+        <th>รหัสประเภทผ้าพิเศษ</th>
         <th>ชื่อประเภทผ้าพิเศษ</th>
         <th></th>
       </tr>
@@ -135,7 +135,7 @@
 </p-dialog> -->
 
 <p-confirmDialog
-  header="Warning"
+  header="คำเตือน"
   icon="pi pi-exclamation-triangle"
   [style]="{ width: '30vw', 'font-size': 'large' }"
   [baseZIndex]="10000"
